# ES

./: .gitignore  README.md  pyproject.toml
notebooks/: better_excel.ipynb  transfer_data.ipynb
src/es/: __main__.py  home.py
src/es/modules/: analytics.py  invoice.py  receipt.py
src/es/utils/: config.py  database.py  database_old.py  tkinter_utils.py  utils.py
